--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.2.0",
     "react-banner": "^0.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-confirm-bootstrap": "^5.1.1",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
