--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ deploy:
   script:
   - yarn install
   - yarn run build
+  - cp web.config build
   - apt-get update
   - apt-get install lftp
   - lftp -u $FTP_USER,$FTP_PASSWORD $FTP_URL -e "mirror -R -p -x=node_modules build/. ./"
