Revert "deploy to staging to see if CORS is an issue"
This reverts commit 1531f56

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ deploy_staging:
   environment:
    name: Staging
    url: https://staging-aeclient.azurewebsites.net
+  only:
+  - master
 
 deploy_production:
   stage: deploy
