--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-confirm-bootstrap": "^5.1.1",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
     "react-table": "^6.7.6"
