--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-confirm-bootstrap": "^5.1.1",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-load-overlay": "^0.2.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
