--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
-    "react-table": "^6.7.6"
+    "react-table": "^6.7.6",
+    "url-search-params-polyfill": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
