Fix build errors Fix package name with incorrect company name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "applied_engineering",
+  "name": "associated_engineering",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
